Fixing highlighter warning.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: Lab on Maintenance, Construction and Intelligence of Software (MCIS)
 markdown: redcarpet
-highlighter: true
+highlighter: rouge
