--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,9 @@
 - name: Software Engineering for Machine Learning Applications (SEMLA)
   url: https://semla.polymtl.ca/
 
+- name: Intl. Workshop on Software Health in Projects, Ecosystems and Communities (SoHeal)
+  url: https://soheal.github.io/
+
 - name: Intl. Workshop on Release Engineering (RELENG)
   url: http://releng.polymtl.ca/
 
