--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -5,10 +5,10 @@
   url: makao.html
 
 - name: Aspects for C (Aspicere)
-  url: http://mcis.cs.queensu.ca/~bram/aspicere/index.html
+  url: aspicere.html
 
 - name: Analyze your Conditional Compilation (R3V3RS3)
-  url: http://mcis.cs.queensu.ca/~bram/r3v3rs3/index.html
+  url: r3v3rs3.html
 
 - name: Document your Prolog Code (PrologDoc)
   url: http://prologdoc.sourceforge.net/
